delete: add possibility to soft-delete datasets
Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>